--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/store-devtools": "^4.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "hoek": "^5.0.3",
     "rxjs": "^5.5.2",
     "ssri": "^6.0.0",
     "zone.js": "^0.8.14"
